<resources>
    <string name="app_name" translatable="false">GestorDeAlmacenamiento</string>
    <string name="app_name_Acronym" translatable="false">GAEN</string>
    <string name="author1" translatable="false">José Gallardo Caballero</string>
    <string name="author2" translatable="false">José María Martínez Alcalde</string>
    <string name="author3" translatable="false">José Javier Velasco Whu</string>
    <string name="ok" translatable="false">OK</string>
    <string name="cancel">Cancelar</string>
    <string name="chooseOption">Elije una opción.</string>
    <string name="unexpectedValue">Valor inesperado</string>
    <string name="open">Abrir</string>
    <string name="delete">Eliminar</string>
    <string name="rename">Renombrar</string>
    <string name="share">Compartir</string>
    <string name="good_share">Enlace copiado al portapapeles.</string>
    <string name="no" translatable="false">No</string>
    <string name="yes">Sí</string>
    <string name="uploadFile">Subir archivo</string>
    <string name="newNameFile">Nuevo nombre del archivo:</string>
    <string name="createFolder">Crear carpeta</string>
    <string name="nameFolder">Nombre de la carpeta.</string>
    <string name="good_folderCreated">Carpeta creada con éxito.</string>
    <string name="good_addedFile">Archivo añadido con éxito.</string>
    <string name="good_renamedFolder">Carpeta renombrada con éxito.</string>
    <string name="good_deletedFile">Archivo eliminado con éxito.</string>
    <string name="good_renamedFile">Archivo renombrado con éxito.</string>
    <string name="good_deletedFolder">Carpeta eliminada con éxito.</string>
    <string name="error_renamedFile">Error al renombrar el archivo.</string>
    <string name="error_fileName">El nombre del archivo no es válido.</string>
    <string name="error_addedFile">Error al añadir el archivo.</string>
    <string name="error_fileExits">El archivo ya existe</string>
    <string name="error_folderCreated">Error al crear la carpeta.</string>
    <string name="error_noFileDirectory">No se encontró el directorio de archivos.</string>
    <string name="error_readFile">Error al leer el archivo.</string>
    <string name="error_writeFile">Error al escribir el archivo.</string>
    <string name="question_deleteFile">Estás a punto de eliminar una carpeta con ficheros. ¿Deseas continuar?</string>
    <string name="question_continue">. ¿Deseas continuar?</string>
    <string name="question_folder">Estás a punto de eliminar una carpeta</string>
    <string name="question_file">Estás a punto de eliminar un archivo</string>
    <string name="confirm_deleteFile">Confirmar eliminación</string>
    <string name="username">Nombre de usuario</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar Sesión</string>
    <string name="good_login">Sesión inciada correctamente</string>
    <string name="logout">Cerrar sesión</string>
    <string name="good_logout">Sesión cerrada correctamente.</string>
    <string name="register">Registrarse</string>
    <string name="good_register">Usuario registrado correctamente.</string>
    <string name="noAccount">¿No tienes cuenta? Regístrate.</string>
    <string name="yesAccount">¿Ya tienes cuenta? Inicia sesión.</string>
    <string name="recoverPWD">Recuperar contraseña</string>
    <string name="good_recoverPWD">Tu contraseña ha sido recuperada. Por favor, abre tu correo.</string>
    <string name="registeredEmail">Por favor,\nescribe el correo con el\nque te registraste.</string>
    <string name="no_email_in_db">Este correo electrónico no está en la base de datos.</string>
    <string name="invalid_email">Por favor, introduce un correo electrónico válido.</string>
    <string name="invalid_user">El usuario no existe. Por favor, regístrese.</string>
    <string name="error_userAlreadyExists">El correo ya está registrado.</string>
    <string name="error_register">Error al registrarse.</string>
    <string name="error_emailOrPasswordIncorrect">Correo electrónico o contraseña incorrectos</string>
    <string name="deleteAccount">Borrar cuenta</string>
    <string name="confirmDeleteAccount">Confirmar eliminación de la cuenta</string>
    <string name="error_DeleteAccount">Error al eliminar la cuenta</string>
    <string name="good_accountDeleted">Cuenta eliminada correctamente</string>
    <string name="configPermsText">Configura los permisos que tendrán las personas invitadas por defecto.</string>
    <string name="permShareWithOthers">Compartir archivos de tu nube</string>
    <string name="good_permUpdated">Permisos actualizados correctamente.</string>
    <string name="permAddFiles">Añadir archivos a tu nube</string>
    <string name="permRenameFiles">Renombrar archivos de tu nube</string>
    <string name="permCreateFolders">Crear carpetas en tu nube</string>
    <string name="permDeleteFolders">Eliminar carpetas de tu nube</string>
    <string name="permRenameFolders">Renombrar carpetas de tu nube</string>
    <string name="permUpdate">Actualizar permisos</string>
    <string name="userTerms">Acepto los términos de uso</string>
    <string name="accept_term_of_use">Por favor, acepta los términos de uso.</string>
    <string name="mailReports">Estoy de acuerdo con recibir\nboletines al correo electrónico.</string>
    <string name="accept_email_messages">Por favor, acepta los envíos de mensajes al correo.</string>
    <string name="home_version">- Creada funcionalidad de soporte, y mejorado todo para la entrega de 2º conv.\n- Primera versión del programa, se añaden las opciones Inicio, Archivos y Yo.</string>
    <string name="updates">Últimas Updates: (V2.0)</string>
    <string name="here_is_your_personal_information">Aquí puedes ver tu información personal:</string>
    <string name="account_type">Tipo de cuenta:</string>
    <string name="expire_date">Fecha de vencimiento:</string>
    <string name="last_folders">Últimas carpetas utilizadas:</string>
    <string name="bienvenido">Bienvenido,</string>
    <string name="home">Inicio</string>
    <string name="files">Archivos</string>
    <string name="permissions">Permisos</string>
    <string name="alreadyinfilescreen">Ya estás en la pantalla de archivos.</string>
    <string name="soporte">Soporte</string>
    <string name="preguntas_frecuentes">Preguntas frecuentes</string>
    <string name="obten_mas_ayuda">Obtener más ayuda</string>
    <string name="consejos_y_respuestas_tiles">Consejos y respuestas útiles</string>
    <string name="acerca_de">Acerca de</string>
    <string name="quienes_somos">¿Quienes somos?</string>
    <string name="c_mo_subo_archivos_al_gestor_de_archivos_en_la_nube">¿Cómo subo archivos al gestor de archivos en la nube?</string>
    <string name="hay_un_l_mite_de_tama_o_para_los_archivos_que_puedo_subir">¿Hay un límite de tamaño para los archivos de subida?</string>
    <string name="hacer_una_copia_de_seguridad_de_fotos_y_videos">Hacer una copia de seguridad de fotos y videos</string>
    <string name="cambiar_la_forma_en_que_se_ordenan_los_archivos">Cambiar la forma en que se ordenan los archivos</string>
    <string name="informar_de_un_problema">Informar de un problema</string>
    <string name="contacta_con_nosotros">Contacta con nosotros</string>
    <string name="declaracion_de_privacidad_de_gaen">Declaracion de privacidad de Gaen</string>
    <string name="licencia_de_software">Licencia de Software</string>
    <string name="que_es_gaen">¿Que es GAEN?</string>
    <string name="sobre_nosotros">Sobre nosotros</string>
    <string name="atras">Atras</string>
    <string name="declaraci_n_de_privacidad_de_gaen">Declaración de privacidad de GAEN</string>
    <string name="fecha_de_vigencia_23_09_2029">Fecha de vigencia: [23/09/2029]</string>
    <string name="_1_informaci_n_que_recopilamos">1. Información que recopilamos</string>
    <string name="datos_proporcionados_por_usted">Datos proporcionados por usted:</string>
    <string name="cuenta_e_informaci_n_de_registro_al_crear_una_cuenta_en_gaen_recopilamos_su_nombre_direcci_n_de_correo_electr_nico_y_contrase_a">Cuenta e Información de Registro: Al crear una cuenta en Gaen, recopilamos su nombre, dirección de correo electrónico y contraseña.</string>
    <string name="archivos_y_contenido_recopilamos_y_almacenamos_los_archivos_que_usted_carga_descarga_o_accede_a_trav_s_de_nuestro_servicio_incluyendo_fotos_videos_y_documentos">Archivos y Contenido: Recopilamos y almacenamos los archivos que usted carga, descarga o accede a través de nuestro servicio, incluyendo fotos, videos y documentos.</string>
    <string name="_2_uso_de_la_informaci_n">2. Uso de la información</string>
    <string name="proveer_mantener_y_mejorar_nuestros_servicios_proteger_la_seguridad_de_nuestros_servicios_y_de_nuestros_usuarios_comunicarnos_con_usted_incluyendo_enviarle_informaci_n_sobre_cambios_en_nuestros_t_rminos_o_pol_ticas">Proveer, mantener y mejorar nuestros servicios. Proteger la seguridad de nuestros servicios y de nuestros usuarios. Comunicarnos con usted, incluyendo enviarle información sobre cambios en nuestros términos o políticas.</string>
    <string name="_3_seguridad_de_la_informaci_n">3. Seguridad de la información</string>
    <string name="implementamos_medidas_de_seguridad_t_cnicas_y_organizativas_para_proteger_su_informaci_n_personal_contra_el_acceso_la_alteraci_n_la_p_rdida_o_la_destrucci_n_no_autorizados">Implementamos medidas de seguridad técnicas y organizativas para proteger su información personal contra el acceso, la alteración, la pérdida o la destrucción no autorizados.</string>
    <string name="ques_es_gaen">¿Ques es GAEN?</string>
    <string name="gaen_es_un_servicio_de_gesti_n_de_archivos_en_la_nube_dise_ado_para_proporcionar_a_los_usuarios_un_almacenamiento_seguro_accesible_y_f_cil_de_usar">Gaen es un servicio de gestión de archivos en la nube diseñado para proporcionar a los usuarios un almacenamiento seguro, accesible y fácil de usar.</string>
    <string name="caracter_sticas_principales_de_gaen">Características Principales de GAEN:</string>
    <string name="almacenamiento_en_la_nube_los_usuarios_pueden_subir_sus_archivos_a_servidores_seguros_en_la_nube_donde_est_n_protegidos_y_accesibles_desde_cualquier_lugar">Almacenamiento en la Nube: Los usuarios pueden subir sus archivos a servidores seguros en la nube, donde están protegidos y accesibles desde cualquier lugar.</string>
    <string name="variedad_de_permisos_los_permisos_hacen_que_segun_las_opciones_que_seleccionas_el_gestor_actuara_de_una_manera_diferente_y_totalmente_al_gusto_del_consumidor">Variedad de permisos: Los permisos hacen que segun las opciones que seleccionas el gestor actuara de una manera diferente y totalmente al gusto del consumidor.</string>
    <string name="seguridad_y_privacidad_el_servicio_utiliza_encriptaci_n_avanzada_para_proteger_los_datos_durante_la_transmisi_n_y_en_reposo_asegurando_que_la_informaci_n_personal_y_empresarial_de_los_usuarios_se_mantenga_privada_y_segura">Seguridad y Privacidad: El servicio utiliza encriptación avanzada para proteger los datos durante la transmisión y en reposo, asegurando que la información personal y empresarial de los usuarios se mantenga privada y segura.</string>
    <string name="beneficios_de_usar_gaen">Beneficios de Usar GAEN:</string>
    <string name="flexibilidad_acceso_a_tus_archivos_desde_cualquier_dispositivo_en_cualquier_momento_y_lugar">Flexibilidad: Acceso a tus archivos desde cualquier dispositivo, en cualquier momento y lugar.</string>
    <string name="escalabilidad_ofrece_diferentes_planes_de_almacenamiento_adaptados_a_las_necesidades_individuales_o_empresariales_permitiendo_aumentar_el_espacio_de_almacenamiento_seg_n_sea_necesario">Escalabilidad: Ofrece diferentes planes de almacenamiento adaptados a las necesidades individuales o empresariales, permitiendo aumentar el espacio de almacenamiento según sea necesario.</string>
</resources>