<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context="com.example.gestordealmacenamiento.support.Support">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginTop="16dp"
        android:text="@string/soporte"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="48dp"
        android:text="@string/preguntas_frecuentes"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginTop="172dp"
        android:text="@string/consejos_y_respuestas_tiles"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginTop="291dp"
        android:text="@string/obten_mas_ayuda"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginTop="410dp"
        android:text="@string/acerca_de"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="531dp"
        android:text="@string/quienes_somos"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/myButton1"
        android:layout_width="353dp"
        android:layout_height="34dp"
        android:layout_gravity="center"
        android:layout_marginStart="29dp"
        android:layout_marginTop="75dp"
        android:background="@drawable/blue_square_button"
        android:onClick="PREGUNTA1"
        android:text="@string/c_mo_subo_archivos_al_gestor_de_archivos_en_la_nube"
        android:textColor="#000000"
        android:textSize="9sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:layout_width="353dp"
        android:layout_height="34dp"
        android:layout_gravity="center"
        android:layout_marginStart="29dp"
        android:layout_marginTop="122dp"
        android:background="@drawable/blue_square_button"
        android:onClick="PREGUNTA2"
        android:text="@string/hay_un_l_mite_de_tama_o_para_los_archivos_que_puedo_subir"
        android:textColor="#000000"
        android:textSize="9sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:layout_width="353dp"
        android:layout_height="34dp"
        android:layout_gravity="center"
        android:layout_marginStart="29dp"
        android:layout_marginTop="198dp"
        android:background="@drawable/blue_square_button"
        android:onClick="CONSEJO1"
        android:text="@string/hacer_una_copia_de_seguridad_de_fotos_y_videos"
        android:textColor="#000000"
        android:textSize="9sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:layout_width="353dp"
        android:layout_height="34dp"
        android:layout_gravity="center"
        android:layout_marginStart="29dp"
        android:layout_marginTop="244dp"
        android:background="@drawable/blue_square_button"
        android:onClick="CONSEJO2"
        android:text="@string/cambiar_la_forma_en_que_se_ordenan_los_archivos"
        android:textColor="#000000"
        android:textSize="9sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:layout_width="353dp"
        android:layout_height="34dp"
        android:layout_gravity="center"
        android:layout_marginStart="29dp"
        android:layout_marginTop="317dp"
        android:background="@drawable/blue_square_button"
        android:onClick="AYUDA1"
        android:text="@string/informar_de_un_problema"
        android:textColor="#000000"
        android:textSize="9sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:layout_width="353dp"
        android:layout_height="34dp"
        android:layout_gravity="center"
        android:layout_marginStart="29dp"
        android:layout_marginTop="362dp"
        android:background="@drawable/blue_square_button"
        android:onClick="AYUDA2"
        android:text="@string/contacta_con_nosotros"
        android:textColor="#000000"
        android:textSize="9sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:layout_width="353dp"
        android:layout_height="34dp"
        android:layout_gravity="center"
        android:layout_marginStart="29dp"
        android:layout_marginTop="437dp"
        android:background="@drawable/blue_square_button"
        android:onClick="ACERCADE1"
        android:text="@string/declaracion_de_privacidad_de_gaen"
        android:textColor="#000000"
        android:textSize="9sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:layout_width="353dp"
        android:layout_height="34dp"
        android:layout_gravity="center"
        android:layout_marginStart="29dp"
        android:layout_marginTop="483dp"
        android:background="@drawable/blue_square_button"
        android:onClick="ACERCADE2"
        android:text="@string/licencia_de_software"
        android:textColor="#000000"
        android:textSize="9sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:layout_width="353dp"
        android:layout_height="34dp"
        android:layout_gravity="center"
        android:layout_marginStart="29dp"
        android:layout_marginTop="557dp"
        android:background="@drawable/blue_square_button"
        android:onClick="SOMOS1"
        android:text="@string/que_es_gaen"
        android:textColor="#000000"
        android:textSize="9sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/myButton10"
        android:layout_width="353dp"
        android:layout_height="34dp"
        android:layout_gravity="center"
        android:layout_marginStart="29dp"
        android:layout_marginTop="600dp"
        android:background="@drawable/blue_square_button"
        android:onClick="SOMOS2"
        android:text="@string/sobre_nosotros"
        android:textColor="#000000"
        android:textSize="9sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/myButton10"
        android:layout_width="123dp"
        android:layout_height="36dp"
        android:layout_gravity="center"
        android:layout_marginStart="29dp"
        android:layout_marginTop="656dp"
        android:background="@drawable/blue_square_button"
        android:onClick="BackMore"
        android:text="@string/atras"
        android:textColor="#000000"
        android:textSize="9sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateIds" />
</androidx.constraintlayout.widget.ConstraintLayout>